MNT: Add some more repos

--- a/download-git-commits.ipynb
+++ b/download-git-commits.ipynb
@@ -702,7 +702,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing giltis/asv. 1 of 36\n",
+      "processing giltis/benchmark_scripts. 2 of 36\n",
+      "processing giltis/bluesky. 3 of 36\n",
+      "processing giltis/channelarchiver. 4 of 36\n",
+      "processing giltis/conda-prescriptions. 5 of 36\n",
+      "processing giltis/data-exchange. 6 of 36\n",
+      "processing giltis/dataportal. 7 of 36\n",
+      "processing giltis/docs. 8 of 36\n",
+      "processing giltis/dotfiles. 9 of 36\n",
+      "processing giltis/filestore. 10 of 36\n",
+      "processing giltis/git-remote-bzr. 11 of 36\n",
+      "processing giltis/git-remote-hg. 12 of 36\n",
+      "processing giltis/Glogg. 13 of 36\n",
+      "processing giltis/ImageVis3D. 14 of 36\n",
+      "processing giltis/matplotlib. 15 of 36\n",
+      "processing giltis/metadatastore. 16 of 36\n",
+      "processing giltis/netcdf4-python. 17 of 36\n",
+      "processing giltis/openmicroscopy. 18 of 36\n",
+      "processing giltis/ophyd. 19 of 36\n",
+      "processing giltis/pims. 20 of 36\n",
+      "processing giltis/pyOlog. 21 of 36\n",
+      "processing giltis/pyqtgraph. 22 of 36\n",
+      "processing giltis/pyRafters. 23 of 36\n",
+      "processing giltis/replay. 24 of 36\n",
+      "processing giltis/scikit-fuzzy. 25 of 36\n",
+      "processing giltis/scikit-image. 26 of 36\n",
+      "processing giltis/scikit-xray. 27 of 36\n",
+      "processing giltis/scikit-xray-examples. 28 of 36\n",
+      "processing giltis/scipy. 29 of 36\n",
+      "processing giltis/suitcase. 30 of 36\n",
+      "processing giltis/tomopy. 31 of 36\n",
+      "processing giltis/userpackages. 32 of 36\n",
+      "processing giltis/vim-colorschemes. 33 of 36\n",
+      "processing giltis/VisTrails. 34 of 36\n",
+      "processing giltis/VTTools. 35 of 36\n",
+      "processing giltis/xray-vision. 36 of 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "giltis_commits = fetch_commits_for_user('giltis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -729,12 +783,13 @@
     "    arkilic_commits,\n",
     "    cowanml_commits,\n",
     "    klauer_commits,\n",
+    "    giltis_commits\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -745,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -763,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -771,10 +826,10 @@
     {
      "data": {
       "text/plain": [
-       "291595"
+       "380817"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -797,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -805,10 +860,10 @@
     {
      "data": {
       "text/plain": [
-       "182540"
+       "236270"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -832,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -848,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -868,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -876,6 +931,15 @@
    "source": [
     "cleaned_df.to_csv('cleaned-commit-info.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
